# knowledgebase

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml
personal_wiki/: __main__.py  app.py  auth.py  database.py  models.py  templating.py
personal_wiki/routes/: admin.py  articles.py  auth.py  subthemes.py  themes.py  uploads.py
personal_wiki/static/css/: style.css
personal_wiki/static/js/: app.js  editor.js
personal_wiki/templates/: base.html
personal_wiki/templates/admin/: login.html
personal_wiki/templates/articles/: detail.html  form.html
personal_wiki/templates/auth/: login.html
personal_wiki/templates/subthemes/: detail.html  form.html
personal_wiki/templates/themes/: detail.html  form.html  list.html
